<resources>
    <string name="app_name">Restly</string>
    <string name="requests_tab_title">Requests</string>
    <string name="collection_tab_title">Collections</string>
    <string name="settings_tab_title">Settings</string>
    <string name="request_menu_add_button_text">Add</string>

    <string name="default_collection_title">Requests</string>
    <string name="collection_default_title">New Collection</string>
    <string name="request_group_default_title">New Folder</string>

    <string name="request_detail_name_default_text">New Request</string>
    <string name="request_detail_url_placeholder_text">https://</string>
    <string name="request_detail_default_method_text">GET</string>
    <string name="request_detail_params_header_text">Query Parameters</string>
    <string name="request_detail_params_add_button_text">Add parameter</string>
    <string name="request_detail_headers_header_text">Headers</string>
    <string name="request_detail_headers_add_button_text">Add header</string>
    <string name="request_detail_key_text">Key</string>
    <string name="request_detail_value_text">Value</string>
    <string name="request_detail_body_header_text">Body</string>
    <string name="request_details_body_urlencoded_add_button_text">Add item</string>
    <string name="request_detail_body_formdata_add_button_text">Add item</string>
    <string name="request_detail_body_raw_label_text">Body data</string>
    <string name="request_detail_body_raw_icon_description">Arrow icon</string>
    <string name="request_detail_body_binary_label_text">File</string>
    <string name="request_detail_body_binary_add_label_text">Select</string>

    <string name="method_popup_menu_option_get_text">GET</string>
    <string name="method_popup_menu_option_post_text">POST</string>
    <string name="method_popup_menu_option_put_text">PUT</string>
    <string name="method_popup_menu_option_patch_text">PATCH</string>
    <string name="method_popup_menu_option_head_text">HEAD</string>
    <string name="method_popup_menu_option_options_text">OPTIONS</string>
    <string name="method_popup_option_delete">DELETE</string>
    <string name="request_detail_body_raw_content_type_title">Content-Type</string>
    <string name="content_type_option_textplain_text">text/plain</string>
    <string name="content_type_option_applicationjson_text">application/json</string>
    <string name="content_type_option_applicationxml_text">application/xml</string>
    <string name="request_menu_save_button_text">Save</string>
    <string name="request_menu_more_button_text">More</string>
    <string name="request_more_menu_option_rename_text">Rename</string>

    <string name="dialog_cancel_option">Cancel</string>
    <string name="dialog_confirm_option">Confirm</string>
    <string name="dialog_ok_option">OK</string>
    <string name="dialog_ok_confirm_delete_option">Delete</string>
    <string name="dialog_delete_collection_title">Delete collection</string>
    <string name="dialog_delete_collection_message">Are you sure you want to delete the collection? All children requests will be deleted too.</string>
    <string name="dialog_delete_group_title">Delete request group</string>
    <string name="dialog_delete_group_message">Are you sure you want to delete this request group? All children request groups and requests will be deleted too.</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="edit_text_dialog_title">Body Data</string>
    <string name="successful_sign_up_title">You\'ve successfully signed up</string>
    <string name="successful_sign_up_description">You can now log into your account.</string>

    <string name="dialog_logout_delete_collections_title">Keep remote collections</string>
    <string name="dialog_logout_delete_collections_description">Do you want to keep your remote postman collections?</string>
    <string name="dialog_logout_delete_collections_keep_option">Keep</string>
    <string name="dialog_logout_delete_collections_delete_option">Delete</string>


    <string name="edit_text_menu_done_button">Done</string>
    <string name="request_multipart_type_menu_option_text">Text</string>
    <string name="request_multipart_type_menu_option_file">File</string>

    <string name="response_info_general_section_label">General</string>
    <string name="response_info_section_headers_label">Headers</string>
    <string name="response_body_raw_unsupported_type">Raw data preview of media files is unsupported</string>
    <string name="response_body_empty_placeholder_text">You haven\'t sent request yet</string>

    <string name="collection_edit_fragment_label">Edit Collection</string>
    <string name="collection_edit_name_input_hint">My Collection</string>
    <string name="collection_edit_description_input_hint">Description of your collection...</string>
    <string name="collection_edit_name_label">Collection Name</string>
    <string name="collection_edit_description_label">Collection Desciption</string>
    <string name="collection_edit_menu_save_option_text">Save</string>

    <string name="request_group_edit_fragment_label">Edit Request Folder</string>
    <string name="request_group_edit_name_input_hint">My Request Folder</string>
    <string name="request_group_edit_description_input_hint">Description of your request folder...</string>
    <string name="request_group_edit_name_label">Collection Name</string>
    <string name="request_group_edit_description_label">Folder description</string>
    <string name="request_group_edit_menu_save_option_text">Save</string>

    <string name="settings_login_postman_avatar_description">Postman user picture</string>
    <string name="settings_login_postman_notlogged_title">Log In to Postman</string>
    <string name="settings_login_postman_notlogged_description">Sign In to Postman with API key to synchronize all your collections</string>
    <string name="settings_login_postman_button_label">Enter API Key</string>
    <string name="settings_login_postman_dialog_title">Enter Postman API Key</string>
    <string name="settings_logout_button_label">Logout</string>

    <string name="settings_login_restly_avatar_description">Restly user picture</string>
    <string name="settings_login_restly_notlogged_title">Log In to Restly account</string>
    <string name="settings_login_restly_notlogged_description">Sign In to Restly account to synchronize all your collections between devices</string>
    <string name="settings_login_restly_button_label">Login</string>
    <string name="settings_logout_restly_button_label">Logout</string>

    <!-- Errors -->
    <string name="postman_auth_error_name">Authentication Failed</string>
    <string name="postman_auth_error_description">Provided API key is invalid or expired.</string>
    <string name="conn_refused_error_name">Connection Refused</string>
    <string name="conn_refused_error_description">Connection was refused by host.</string>
    <string name="conn_timeout_error_name">Connection Timed Out</string>
    <string name="conn_timeout_error_description">Connection Timed Out.</string>
    <string name="unknown_host_error_name">Unknown Host</string>
    <string name="unknown_host_error_description">Unable to resolve host.</string>
    <string name="conn_unexpected_error_name">Unexpected error</string>
    <string name="conn_unexpected_error_description">Unable to send request due to unexpected error.</string>
    <string name="not_found_error_name">Host not found</string>
    <string name="not_found_error_description">No host found with specified address.</string>
    <string name="unexpected_url_scheme_error_name">Invalid URL Scheme</string>
    <string name="unexpected_url_scheme_error_description">Expected URL scheme \'http\' or \'https\' but no colon was found.</string>
    <string name="empty_url_error_name">Invalid URL</string>
    <string name="empty_url_error_description">No URL was provided.</string>
    <string name="no_internet_conn_error_name">No Internet Connection</string>
    <string name="no_internet_conn_error_description">Check your mobile or WIFI internet connection settings.</string>
    <string name="size_exceeds_limit_error_name">Response body is too large</string>
    <string name="size_exceeds_limit_error_description">Response body size exceeds maximum limit. You can change this in \"Settings\" tab.</string>
    <string name="request_call_timeout_error_name">Request Call Timeout</string>
    <string name="request_call_timeout_error_description">Request call timeout exceeded maximum limit. You can change this in \"Settings\" tab.</string>
    <string name="not_strong_password_error_name">Password isn\'t strong enough</string>
    <string name="not_strong_password_error_description">Password must be length of 8 or more, contain one capital latter, number and a symbol.</string>
    <string name="invalid_credentials_error_name">Invalid credentials</string>
    <string name="invalid_credentials_error_description">Provided email/password was invalid.</string>
    <string name="user_exists_error_name">This user is already exists</string>
    <string name="user_exists_error_description">Account with such email already exists.</string>

    <string name="settings_section_request_title">Request</string>
    <string name="settings_request_timeout_label">Timeout (Milliseconds)</string>
    <string name="settings_request_maxsize_label">Max response size (MB)</string>
    <string name="settings_request_sslverification_label">SSL certificate verification</string>
    <string name="settings_section_webview_title">WebView</string>
    <string name="settings_webview_javascriptenabled_label">Javascript enabled</string>
    <string name="settings_webview_textsize_label">Font size</string>
    <string name="account_login_submit_button_text">Log In</string>
    <string name="account_login_password_input_hint">Password</string>
    <string name="account_login_email_input_hint">Email</string>
    <string name="account_register_submit_button_text">Sign Up</string>
    <string name="account_register_email_input_hint">Email</string>
    <string name="account_register_password_input_hint">Password</string>
    <string name="account_register_username_input_hint">Username</string>
    <string name="settings_register_restly_button_label">Sign Up</string>
    <string name="request_menu_add_folder_button_text">Add folder</string>
</resources>