<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow android:layout_gravity="center_vertical">

        <TextView
            android:gravity="center_vertical"
            style="@style/Restly.Request.BodyTextLabel"
            android:text="@string/request_detail_body_raw_label_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/request_detail_body_raw_icon_description"
            android:foregroundGravity="right"
            android:src="@drawable/ic_arrow_right" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/border_bottom"/>

    <TableRow
        android:id="@+id/request_detail_body_raw_button">

        <TextView
            style="@style/Restly.Request.BodyTextLabel"
            android:text="@string/request_detail_body_raw_content_type_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/request_detail_body_raw_content_type_selected_text"
            style="@style/Restly.Request.BodyTextLabel"
            android:layout_gravity="right"
            android:text="" />
    </TableRow>
</TableLayout>